# RF1060R

./: .envrc  .gitattributes  .gitignore  Cargo.toml  build.rs  wrapper.h
baltech_sdk/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
baltech_sdk/appnotes/: CMakeLists.txt  Makefile  cmake_install.cmake
baltech_sdk/appnotes/brpdriver/: appnote_BrpDriver.c
baltech_sdk/appnotes/c_sharp/: appnote_c_sharp.cs
baltech_sdk/appnotes/mempool/: appnote_mempool.c
baltech_sdk/appnotes/reader_update/: appnote_reader_update.c
baltech_sdk/appnotes/secure_communication/: Demo_Security_Settings.balcfg  appnote_secure_communication.c
baltech_sdk/appnotes/tcp_client/: 00000-0000-1044-01_Ethernet_Demo.balcfg  appnote_tcp_client.c
baltech_sdk/appnotes/tcp_server/: appnote_tcp_server.c
baltech_sdk/appnotes/tcp_server/certificates_and_keys/PKIAUTH_BALTECH_DEFAULT/: README.txt  keypair.key  settings.cfg
baltech_sdk/appnotes/tcp_server/certificates_and_keys/PKIAUTH_BALTECH_DEFAULT/host_chain/: 1software_ca.crt  2host.crt
baltech_sdk/appnotes/tcp_server/certificates_and_keys/PKIAUTH_BALTECH_DEFAULT/reader_chain/: 0root.crt  1production_ca.crt
baltech_sdk/appnotes/udp_introspection/: appnote_udp_introspection.c
baltech_sdk/appnotes/usb_cdc/: appnote_usb_cdc.c  baltech_linux_usb_cdc.rules
baltech_sdk/appnotes/usb_hid/: appnote_usb_hid.c  baltech_linux_usb_hid.rules
baltech_sdk/appnotes/vhl/: 00000-0006-0000-01_SDK_AppNote_VHL.balcfg  appnote_vhl.c
baltech_sdk/baltech_api/c/: CMakeLists.txt  Doxyfile.template  Makefile  baltech-customdoxygen.css  baltech-footer.html  baltech-header.html  baltech_api.c  baltech_api.h  cmake_install.cmake  typedefs.h
baltech_sdk/baltech_api/c/cmds/: ar.h  ask.h  bat.h  bleperiph.h  cardemu.h  crypto.h  dbg.h  desfire.h  dhwctrl.h  disp.h  em.h  epcuid.h  eth.h  felica.h  flashfs.h  ftob.h  hid.h  hitag.h  i2c.h  i4ce.h  iso14a.h  iso14b.h  iso14ce.h  iso14l4.h  iso15.h  iso78.h  keyboard.h  legic.h  lg.h  lga.h  lic.h  lt.h  main.h  mce.h  mif.h  mobileid.h  msgqueue.h  pico.h  pki.h  qkey.h  (+10 more)
baltech_sdk/binaries/linux64/: appnote_brpdriver  appnote_mempool  appnote_reader_update  appnote_secure_communication  appnote_tcp_client  appnote_tcp_server  appnote_udp_introspection  appnote_usb_cdc  appnote_usb_hid  appnote_vhl
baltech_sdk/binaries/win32/static-libs/Release/: BrpDriver.lib  baltech_api.lib  brp_lib.lib
baltech_sdk/binaries/win64/static-libs/Release/: BrpDriver.lib  baltech_api.lib  brp_lib.lib
baltech_sdk/brp_lib/: CMakeLists.txt  Makefile  cmake_install.cmake
baltech_sdk/brp_lib/inc/: brp_lib.h
baltech_sdk/brp_lib/inc/brp_lib/: base64.h  brp_protocol.h  commands.h  common.h  composite_protocol.h  errorcodes.h  frames.h  mempool.h  monitor_protocol.h  names.h  pki_protocol.h  platform.h  protocol.h  protocol_ids.h  rs232_protocol.h  security_protocol.h  tcpip_protocol.h  usb_hid_protocol.h  version.h
baltech_sdk/brp_lib/src/: base64.c  brp_protocol.c  commands.c  composite_protocol.c  frames.c  mempool.c  monitor_protocol.c  monitor_sample.html  namelists.h  names.c  pki_protocol.c  platform_posix.c  platform_win.c  protocol.c  rs232_protocol.c  security_protocol.c  tcpip_protocol.c  usb_hid_protocol.c  version.c
baltech_sdk/legacy_wrapper/: CMakeLists.txt  Makefile  cmake_install.cmake
baltech_sdk/legacy_wrapper/inc/: brp.h  compiler.h  drv_info.h  ftob.h  iso14443_3a.h  iso14443_3b.h  iso14443_4.h  iso15693.h  mifcmds.h  oswrapper.h  serial.h  syscmds.h  tcp.h  vhl.h
baltech_sdk/legacy_wrapper/src/: BrpDriver.def  drv_info.c  ftob.c  iso14443_3a.c  iso14443_3b.c  iso14443_4.c  iso15693.c  mifcmds.c  release.h  syscmds.c  vhl.c  wrapper.c
examples/: connect.rs
src/: lib.rs
